# sigil

./: pyproject.toml
src/sigil/: cli.py  clusters.py  sidecar.py  store.py
src/sigil/languages/: base.py  go.py  python.py  rust.py  typescript.py
