[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sigil"
version = "0.2.0"
description = "Hash-anchored provenance comments for code edited by AI agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "libcst>=1.1",
    "click>=8.0",
    "tree-sitter>=0.24",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
]

[project.scripts]
sig = "sigil.cli:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/sigil"]
